syntax = "proto3";

package bulletinservice;

service BulletinService {
  rpc GetBulletin (GetBulletinRequest) returns (GetBulletinResponse) {}
}

message GetBulletinRequest {
  int32 CUIL = 1;
}

message GetBulletinResponse {
  string firstAdvanCE = 1;
  string firstPeriod = 2;
  string secondAdvance = 3;
  string secondPeriod = 4;
}